# medis-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  webpack.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/renderer/: tauri_redis.js
src/renderer/compat/: electron.ts  jsonlint-stub.js  node-fs.ts  node-net.ts
src/renderer/redux/actions/: connection.js
src/renderer/styles/: global.scss
src/renderer/windows/MainWindow/: entry.jsx
src/renderer/windows/MainWindow/InstanceContent/ConnectionSelectorContainer/Config/: index.jsx
src/renderer/windows/MainWindow/InstanceContent/DatabaseContainer/: index.jsx
src/renderer/windows/MainWindow/InstanceContent/DatabaseContainer/ContentEditable/: index.jsx
src/renderer/windows/MainWindow/InstanceContent/Modal/: index.jsx
src/renderer/windows/MainWindow/InstanceTabs/: index.tsx
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: lib.rs
ui/renderer/: main.tsx
ui/renderer/compat/: empty.ts  node-fs.ts
ui/renderer/redux/actions/: instances.js
ui/renderer/storage/: Favorites.js  Patterns.js
ui/renderer/styles/: global.scss
ui/renderer/windows/MainWindow/: entry.jsx  index.jsx
ui/renderer/windows/MainWindow/InstanceContent/: index.jsx
ui/renderer/windows/MainWindow/InstanceContent/DatabaseContainer/AddButton/: index.jsx
ui/renderer/windows/MainWindow/InstanceContent/Modal/: index.jsx  index.scss
ui/renderer/windows/PatternManagerWindow/: entry.jsx  index.jsx
(+20 files in other folders)
