[package]
name = "medis-tauri"
version = "1.0.3"
description = "GUI for Redis"
authors = ["luin"]
license = "MIT"
repository = "https://github.com/luin/medis"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "medis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "medis-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "aio", "tokio-native-tls-comp"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
